force-app/main/default/objects/Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Organisation linked to this Application</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>