force-app/main/default/objects/Application__c/fields/Applicant_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Organisation_Name__c</fullName>
    <description>Applicant Organisation copied from EOI/Full Application/Full Award Setup forms</description>
    <inlineHelpText>Applicant Organisation copied from EOI/Full Application/Full Award Setup forms</inlineHelpText>
    <label>Applicant Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>