force-app/main/default/objects/Application__c/fields/Applicant_Organisation_Sector__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Organisation_Sector__c</fullName>
    <description>Applicant Organisation Sector copied from EOI/Full Application/Full Award Setup forms</description>
    <inlineHelpText>Applicant Organisation Sector copied from EOI/Full Application/Full Award Setup forms</inlineHelpText>
    <label>Applicant Organisation Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_of_Organisation</valueSetName>
    </valueSet>
</CustomField>