force-app/main/default/objects/Application__c/fields/Applicant_Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Organisation_Type__c</fullName>
    <description>Applicant Organisation Type copied from EOI/Full Application/Setup forms</description>
    <inlineHelpText>Applicant Organisation Type copied from EOI/Full Application/Setup forms</inlineHelpText>
    <label>Applicant Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Type</valueSetName>
    </valueSet>
</CustomField>