force-app/main/default/objects/Application__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <label>Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expression of Interest</fullName>
                <default>true</default>
                <label>Expression of Interest</label>
            </value>
            <value>
                <fullName>Full Application</fullName>
            </value>
            <value>
                <fullName>Live Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>