force-app/main/default/objects/Application__c/fields/application_theme__c.field-meta.xml
<CustomField>
    <fullName>application_theme__c</fullName>
    <label>Application Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Theme</valueSetName>
    </valueSet>
</CustomField>