force-app/main/default/objects/Application__c/fields/Application_Window_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Window_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Window Template</label>
    <referenceTo>Application_Window_Template__c</referenceTo>
    <relationshipLabel>Application</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>