force-app/main/default/objects/Application__c/fields/Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_me__c</fullName>
    <formula>Reviewer__r.Id ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me</label>
    <type>Checkbox</type>
</CustomField>