force-app/main/default/objects/Application__c/fields/Dev_Form_External_Status__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form_External_Status__c</fullName>
    <formula>IF(
   OR(
      TEXT(Development_Form_Status__c) = "Under Review", 
      TEXT(Development_Form_Status__c) = "Under Review (In Progress)", 
      TEXT(Development_Form_Status__c) = "Ready for Approval"
   ), "Submitted", TEXT(Development_Form_Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dev Form External Status</label>
    <type>Text</type>
</CustomField>