force-app/main/default/objects/Application__c/fields/Eligible_for_Full_Application__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Full_Application__c</fullName>
    <formula>IF(
AND(
 Dev_Form_External_Status__c == &#39;Successful&#39;,
 EOI_External_Status__c == &#39;Successful&#39;,
 Identity_Check_External_Status__c == &#39;Successful&#39;
), TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Full Application</label>
    <type>Checkbox</type>
</CustomField>