force-app/main/default/objects/Application__c/fields/Eligible_for_NEW_EOI_Form__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_NEW_EOI_Form__c</fullName>
    <formula>$User.Eligible_for_NEW_EOI_Form__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for NEW EOI Form</label>
    <type>Checkbox</type>
</CustomField>