force-app/main/default/objects/Application__c/fields/EOI_External_Status__c.field-meta.xml
<CustomField>
    <fullName>EOI_External_Status__c</fullName>
    <formula>IF(
   OR(
      TEXT(Status__c) = "Under Review", 
      TEXT(Status__c) = "Under Review (In Progress)", 
      TEXT(Status__c) = "Ready for Approval"
   ), "Submitted", TEXT(Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI External Status</label>
    <type>Text</type>
</CustomField>