force-app/main/default/objects/Application__c/fields/EOI_Number_of_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>EOI_Number_of_Outcomes__c</fullName>
    <description>Number of EOI Outcomes</description>
    <inlineHelpText>Number of EOI Outcomes</inlineHelpText>
    <label>EOI Number of Outcomes</label>
    <summaryFilterItems>
        <field>Form_LCF_Outcome_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>EOI</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Outcome_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>