force-app/main/default/objects/Application__c/fields/EOI_Number_of_Previous_Applications__c.field-meta.xml
<CustomField>
    <fullName>EOI_Number_of_Previous_Applications__c</fullName>
    <description>Number of Previous Applications</description>
    <inlineHelpText>Number of Previous Applications</inlineHelpText>
    <label>EOI Number of Previous Applications</label>
    <summaryForeignKey>Form_LCF_Previous_App_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>