force-app/main/default/objects/Application__c/fields/EOI_Primary_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>EOI_Primary_Commissioner__c</fullName>
    <description>Organisation of EOI Primary Commissioner</description>
    <inlineHelpText>Organisation of EOI Primary Commissioner</inlineHelpText>
    <label>EOI Primary Commissioner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>