force-app/main/default/objects/Application__c/fields/EOI_Primary_Commissioner_Region__c.field-meta.xml
<CustomField>
    <fullName>EOI_Primary_Commissioner_Region__c</fullName>
    <description>Region of EOI Primary Commissioner</description>
    <inlineHelpText>Region of EOI Primary Commissioner</inlineHelpText>
    <label>EOI Primary Commissioner Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Region</valueSetName>
    </valueSet>
</CustomField>