force-app/main/default/objects/Application__c/fields/Full_App_Commissioner_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Commissioner_Benefits__c</fullName>
    <description>Full Application: maximum cashable benefits for commissioners of the project</description>
    <inlineHelpText>Full Application: maximum cashable benefits for commissioners of the project</inlineHelpText>
    <label>Full App Commissioner Benefits</label>
    <summarizedField>Form_LCF_Full_App_1__c.fn_max_benefits_commissioners__c</summarizedField>
    <summaryForeignKey>Form_LCF_Full_App_1__c.application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>