force-app/main/default/objects/Application__c/fields/Full_App_LCF_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Full_App_LCF_Contribution__c</fullName>
    <description>Full Application Maximum LCF Contribution</description>
    <inlineHelpText>Full Application Maximum LCF Contribution</inlineHelpText>
    <label>Full App LCF Contribution</label>
    <summarizedField>Form_LCF_Full_App_1__c.ov_max_requested_funds__c</summarizedField>
    <summaryForeignKey>Form_LCF_Full_App_1__c.application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>