force-app/main/default/objects/Application__c/fields/Full_App_Number_of_Commissioners__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Number_of_Commissioners__c</fullName>
    <description>Number of full application commissioners for this application</description>
    <inlineHelpText>Number of full application commissioners for this application</inlineHelpText>
    <label>Full App Number of Commissioners</label>
    <summaryFilterItems>
        <field>Form_LCF_Commissioner_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Full Application</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Commissioner_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>