force-app/main/default/objects/Application__c/fields/Full_App_Number_of_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Number_of_Outcomes__c</fullName>
    <description>Count of full application outcomes for this application</description>
    <inlineHelpText>Count of full application outcomes for this application</inlineHelpText>
    <label>Full App Number of Outcomes</label>
    <summaryFilterItems>
        <field>Form_LCF_Outcome_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Full Application</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Outcome_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>