force-app/main/default/objects/Application__c/fields/Full_App_Other_Party_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Other_Party_Benefits__c</fullName>
    <description>Full application: maximum cashable benefits for other parties</description>
    <formula>Full_App_Total_Benefits__c -  Full_App_Commissioner_Benefits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full application: maximum cashable benefits for other parties</inlineHelpText>
    <label>Full App Other Party Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>