force-app/main/default/objects/Application__c/fields/Full_App_Outcome_Payments__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Outcome_Payments__c</fullName>
    <description>Full Application Maximum Outcome Payments</description>
    <inlineHelpText>Full Application Maximum Outcome Payments</inlineHelpText>
    <label>Full App Outcome Payments</label>
    <summarizedField>Form_LCF_Full_App_1__c.ov_max_estimated_outcomes_payments__c</summarizedField>
    <summaryForeignKey>Form_LCF_Full_App_1__c.application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>