force-app/main/default/objects/Application__c/fields/Full_App_Primary_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Primary_Commissioner__c</fullName>
    <description>Organisation of Full Application Primary Commissioner</description>
    <inlineHelpText>Organisation of Full Application Primary Commissioner</inlineHelpText>
    <label>Full App Primary Commissioner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>