force-app/main/default/objects/Application__c/fields/Full_App_Primary_Commissioner_Region__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Primary_Commissioner_Region__c</fullName>
    <description>Region of primary commissioner organisation</description>
    <inlineHelpText>Region of primary commissioner organisation</inlineHelpText>
    <label>Full App Primary Commissioner Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Region</valueSetName>
    </valueSet>
</CustomField>