force-app/main/default/objects/Application__c/fields/Full_App_Primary_Outcome_Count__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Primary_Outcome_Count__c</fullName>
    <description>Count of full application primary outcomes (should be 1)</description>
    <inlineHelpText>Count of full application primary outcomes (should be 1)</inlineHelpText>
    <label>Full App Primary Outcome Count</label>
    <summaryFilterItems>
        <field>Form_LCF_Outcome_1__c.primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_LCF_Outcome_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Full Application</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Outcome_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>