force-app/main/default/objects/Application__c/fields/Full_App_Total_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Total_Benefits__c</fullName>
    <description>Full Application: maximum cashable benefits for all parties</description>
    <inlineHelpText>Full Application: maximum cashable benefits for all parties</inlineHelpText>
    <label>Full App Total Benefits</label>
    <summarizedField>Form_LCF_Full_App_1__c.fn_max_benefits_total__c</summarizedField>
    <summaryForeignKey>Form_LCF_Full_App_1__c.application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>