force-app/main/default/objects/Application__c/fields/Full_App_Total_Savings__c.field-meta.xml
<CustomField>
    <fullName>Full_App_Total_Savings__c</fullName>
    <description>Full application: maximum cashable savings for all parties</description>
    <inlineHelpText>Full application: maximum cashable savings for all parties</inlineHelpText>
    <label>Full App Total Savings</label>
    <summarizedField>Form_LCF_Full_App_1__c.fn_max_savings_total__c</summarizedField>
    <summaryForeignKey>Form_LCF_Full_App_1__c.application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>