force-app/main/default/objects/Application__c/fields/Full_Award_Setup_External_Status__c.field-meta.xml
<CustomField>
    <fullName>Full_Award_Setup_External_Status__c</fullName>
    <formula>IF(
   OR(
      TEXT(Full_Award_Setup_Status__c) = "Under Review", 
      TEXT(Full_Award_Setup_Status__c) = "Under Review (In Progress)", 
      TEXT(Full_Award_Setup_Status__c) = "Ready for Approval"
   ), "Submitted", TEXT(Full_Award_Setup_Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Award Setup External Status</label>
    <type>Text</type>
</CustomField>