force-app/main/default/objects/Application__c/fields/Identity_Check_External_Status__c.field-meta.xml
<CustomField>
    <fullName>Identity_Check_External_Status__c</fullName>
    <formula>IF( 
OR( 
TEXT( Identity_Check_Status__c ) = "Under Review", 
TEXT(Identity_Check_Status__c) = "Under Review (In Progress)", 
TEXT(Identity_Check_Status__c) = "Ready for Approval" 
), "Submitted", TEXT(Identity_Check_Status__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial health External Status</label>
    <type>Text</type>
</CustomField>