force-app/main/default/objects/Application__c/fields/Is_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Is_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>