force-app/main/default/objects/Application__c/fields/Last_Answered_Question__c.field-meta.xml
<CustomField>
    <fullName>Last_Answered_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Answered Question</label>
    <referenceTo>Application_Question__c</referenceTo>
    <relationshipLabel>Application</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>