force-app/main/default/objects/Application__c/fields/Owned_by_me__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_me__c</fullName>
    <formula>OwnerId ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by me</label>
    <type>Checkbox</type>
</CustomField>