force-app/main/default/objects/Application__c/fields/Primary_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Commissioner__c</fullName>
    <description>Primary Commissioner from EOI/Full Application/Full Award Setup forms</description>
    <formula>IF(NOT(ISBLANK(Setup_Primary_Stakeholder__c)),Setup_Primary_Stakeholder__c,
IF(NOT(ISBLANK(Full_App_Primary_Commissioner__c)),Full_App_Primary_Commissioner__c,EOI_Primary_Commissioner__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Commissioner from EOI/Full Application/Full Award Setup forms</inlineHelpText>
    <label>Primary Commissioner</label>
    <type>Text</type>
</CustomField>