force-app/main/default/objects/Application__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Project name copied from EOI/Full Application/Setup forms</description>
    <inlineHelpText>Project name copied from EOI/Full Application/Setup forms</inlineHelpText>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>