force-app/main/default/objects/Application__c/fields/Project_Region__c.field-meta.xml
<CustomField>
    <fullName>Project_Region__c</fullName>
    <description>Project Region copied from EOI/Full Application forms</description>
    <inlineHelpText>Project Region copied from EOI/Full Application forms</inlineHelpText>
    <label>Project Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Region</valueSetName>
    </valueSet>
</CustomField>