force-app/main/default/objects/Application__c/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <description>Estimated total outcome payments copied from Full Application/Full Award Setup forms</description>
    <inlineHelpText>Estimated total outcome payments copied from Full Application/Full Award Setup forms</inlineHelpText>
    <label>Project Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>