force-app/main/default/objects/Application__c/fields/Setup_Number_of_Commissioners__c.field-meta.xml
<CustomField>
    <fullName>Setup_Number_of_Commissioners__c</fullName>
    <description>Number of Full Award Setup Stakeholders who are Commissioners</description>
    <inlineHelpText>Number of Full Award Setup Stakeholders who are Commissioners</inlineHelpText>
    <label>Setup Number of Commissioners</label>
    <summaryFilterItems>
        <field>Form_LCF_Commissioner_1__c.st_organisation_type__c</field>
        <operation>equals</operation>
        <value>Commissioner</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_LCF_Commissioner_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Setup</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Commissioner_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>