force-app/main/default/objects/Application__c/fields/Setup_Number_of_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Setup_Number_of_Outcomes__c</fullName>
    <description>Number of Full Award Setup outcomes</description>
    <inlineHelpText>Number of Full Award Setup outcomes</inlineHelpText>
    <label>Setup Number of Outcomes</label>
    <summaryFilterItems>
        <field>Form_LCF_Outcome_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Setup</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Outcome_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>