force-app/main/default/objects/Application__c/fields/Setup_Primary_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Setup_Primary_Stakeholder__c</fullName>
    <description>Organisation of Full Award Setup Primary Stakeholder</description>
    <inlineHelpText>Organisation of Full Award Setup Primary Stakeholder</inlineHelpText>
    <label>Setup Primary Stakeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>