force-app/main/default/objects/Application__c/fields/Setup_Primary_Stakeholder_Count__c.field-meta.xml
<CustomField>
    <fullName>Setup_Primary_Stakeholder_Count__c</fullName>
    <description>Count of full award setup primary stakeholders (should be 1)</description>
    <inlineHelpText>Count of full award setup primary stakeholders (should be 1)</inlineHelpText>
    <label>Setup Primary Stakeholder Count</label>
    <summaryFilterItems>
        <field>Form_LCF_Commissioner_1__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Setup</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_LCF_Commissioner_1__c.primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Commissioner_1__c.application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>